changing categorical variables list

--- a/notebooks/pandas_fiddling.ipynb
+++ b/notebooks/pandas_fiddling.ipynb
@@ -520,7 +520,7 @@
    ],
    "source": [
     "categorical_variables = [\n",
-    "    'MSSubClass'  ,'  MSZoning' , 'MSZoning'  ,' Street' ,' Alley' ,\n",
+    "    'MSSubClass'  ,'MSZoning' , 'Street' ,'Alley' ,\n",
     "    'LotShape' ,' LandContour' , 'Utilities' ,' LotConfig' ,' LandSlope' ,\n",
     "    'Neighborhood' ,' Condition1' , 'Condition2' ,' BldgType' ,' HouseStyle' ,\n",
     "    'OverallQual' ,' OverallCond' , 'RoofStyle' ,' RoofMatl' ,' Exterior1st' ,\n",
