using library alias

--- a/notebooks/pandas_fiddling.ipynb
+++ b/notebooks/pandas_fiddling.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,19 +236,19 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = pandas.read_csv(\"../data/pre-processed/train.csv\", sep=',', index_col=0)\n",
+    "train_data = pd.read_csv(\"../data/pre-processed/train.csv\", sep=',', index_col=0)\n",
     "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -473,13 +473,13 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data = pandas.read_csv(\"../data/pre-processed/test.csv\", sep=',', index_col=0)\n",
+    "test_data = pd.read_csv(\"../data/pre-processed/test.csv\", sep=',', index_col=0)\n",
     "test_data.head()"
    ]
   },
@@ -507,29 +507,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['LandContour', 'GarageYrBlt', 'PoolArea', 'LandSlope', 'HalfBath', 'HouseStyle', 'OpenPorchSF', 'ScreenPorch', 'YrSold', 'MoSold', 'BedroomAbvGr', 'Fireplaces', 'BsmtHalfBath', '3SsnPorch', 'HeatingQC', 'BsmtFullBath', 'BldgType', 'GarageFinish', 'BsmtFinType1', 'LotFrontage', 'BsmtFinSF1', 'FireplaceQu', 'GarageArea', 'KitchenAbvGr', 'BsmtCond', '1stFlrSF', 'KitchenQual', 'OverallCond', 'YearRemodAdd', 'Alley', 'SaleCondition', 'BsmtFinType2', 'Fence', 'YearBuilt', 'LowQualFinSF', 'Condition1', 'Foundation', 'Electrical', 'RoofMatl', 'LotConfig', 'SalePrice', 'GrLivArea', 'WoodDeckSF', 'TotalBsmtSF', 'Exterior1st', 'LotArea', 'FullBath', 'MasVnrArea', 'Street', '2ndFlrSF', 'BsmtFinSF2', 'BsmtUnfSF', 'MasVnrType', 'MiscFeature', 'ExterCond', 'TotRmsAbvGrd', 'EnclosedPorch', 'MiscVal', 'GarageCars', 'PavedDrive', 'GarageQual']\n"
+      "['3SsnPorch', 'BsmtUnfSF', 'KitchenAbvGr', 'WoodDeckSF', 'OpenPorchSF', 'SalePrice', 'Fireplaces', 'BsmtFinSF2', 'GarageCars', 'GarageArea', 'HalfBath', 'BsmtFinSF1', 'TotalBsmtSF', 'BsmtFullBath', '2ndFlrSF', 'LotFrontage', 'MasVnrArea', 'LotArea', 'TotRmsAbvGrd', 'BedroomAbvGr', 'MiscVal', 'FullBath', 'ScreenPorch', '1stFlrSF', 'GrLivArea', 'EnclosedPorch', 'BsmtHalfBath', 'PoolArea', 'LowQualFinSF']\n"
      ]
     }
    ],
    "source": [
     "categorical_variables = [\n",
-    "    'MSSubClass'  ,'MSZoning' , 'Street' ,'Alley' ,\n",
-    "    'LotShape' ,' LandContour' , 'Utilities' ,' LotConfig' ,' LandSlope' ,\n",
-    "    'Neighborhood' ,' Condition1' , 'Condition2' ,' BldgType' ,' HouseStyle' ,\n",
-    "    'OverallQual' ,' OverallCond' , 'RoofStyle' ,' RoofMatl' ,' Exterior1st' ,\n",
-    "    'Exterior2nd' ,' MasVnrType' , 'ExterQual' ,' ExterCond' ,' Foundation' ,\n",
-    "    'BsmtQual' ,' BsmtCond' , 'BsmtExposure' ,' BsmtFinType1' ,' BsmtFinType2' ,\n",
-    "    'Heating' ,' HeatingQC' , 'CentralAir' ,' Electrical' ,' KitchenQual' , \n",
-    "    'Functional' ,' FireplaceQu' , 'GarageType' ,' GarageFinish' ,' GarageQual' ,\n",
-    "    'GarageCond' ,' PavedDrive' , 'PoolQC' ,' Fence' ,' MiscFeature' , \n",
-    "    'SaleType' ,' SaleCondition' \n",
+    "    'MSSubClass','MSZoning','Street','Alley',\n",
+    "    'LotShape','LandContour','Utilities','LotConfig','LandSlope',\n",
+    "    'Neighborhood','Condition1','Condition2','BldgType','HouseStyle',\n",
+    "    'OverallQual','OverallCond','YearBuilt','YearRemodAdd','RoofStyle',\n",
+    "    'RoofMatl','Exterior1st','Exterior2nd','MasVnrType','ExterQual',\n",
+    "    'ExterCond','Foundation','BsmtQual','BsmtCond',\n",
+    "    'BsmtExposure','BsmtFinType1','BsmtFinType2',\n",
+    "    'Heating','HeatingQC','CentralAir','Electrical','KitchenQual',\n",
+    "    'Functional','FireplaceQu','GarageType','GarageYrBlt','GarageFinish','GarageQual',\n",
+    "    'GarageCond','PavedDrive','PoolQC','Fence','MiscFeature','MoSold','YrSold',\n",
+    "    'SaleType','SaleCondition'\n",
     "]\n",
     "\n",
     "quant_variables = list(set(train_data.columns.values) - set(categorical_variables))\n",
@@ -537,6 +538,78 @@
     "#print(categorical_values)\n",
     "#print(train_data.columns.values)\n",
     "print(quant_variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSSubClass\n",
+      "MSZoning\n",
+      "Street\n",
+      "Alley\n",
+      "LotShape\n",
+      "LandContour\n",
+      "Utilities\n",
+      "LotConfig\n",
+      "LandSlope\n",
+      "Neighborhood\n",
+      "Condition1\n",
+      "Condition2\n",
+      "BldgType\n",
+      "HouseStyle\n",
+      "OverallQual\n",
+      "OverallCond\n",
+      "YearBuilt\n",
+      "YearRemodAdd\n",
+      "RoofStyle\n",
+      "RoofMatl\n",
+      "Exterior1st\n",
+      "Exterior2nd\n",
+      "MasVnrType\n",
+      "ExterQual\n",
+      "ExterCond\n",
+      "Foundation\n",
+      "BsmtQual\n",
+      "BsmtCond\n",
+      "BsmtExposure\n",
+      "BsmtFinType1\n",
+      "BsmtFinType2\n",
+      "Heating\n",
+      "HeatingQC\n",
+      "CentralAir\n",
+      "Electrical\n",
+      "KitchenQual\n",
+      "Functional\n",
+      "FireplaceQu\n",
+      "GarageType\n",
+      "GarageYrBlt\n",
+      "GarageFinish\n",
+      "GarageQual\n",
+      "GarageCond\n",
+      "PavedDrive\n",
+      "PoolQC\n",
+      "Fence\n",
+      "MiscFeature\n",
+      "MoSold\n",
+      "YrSold\n",
+      "SaleType\n",
+      "SaleCondition\n"
+     ]
+    }
+   ],
+   "source": [
+    "encode_train_data = pd.DataFrame()\n",
+    "\n",
+    "for col in categorical_variables :\n",
+    "    print(col)\n",
+    "    one_hot_encoded = pd.get_dummies(train_data[col])\n",
+    "    print(one_hot_encoded)"
    ]
   },
   {
