adding more things

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -9,12 +9,13 @@
     "## Pre-processing :\n",
     "\n",
     "- https://www.youtube.com/watch?v=YaKMeAlHgqQ&list=PLTp22zwXLwreSR9MBy76igBAAjrQ6F_rb&index=1&t=3s\n",
-    "- "
+    "- https://www.youtube.com/watch?v=YOR6rQTTEAQ&list=PLTp22zwXLwreSR9MBy76igBAAjrQ6F_rb&index=3&t=12s\n",
+    "- https://github.com/danbochman/Fatality-Analysis-Reporting-System (interesting things about feature enginerring and cleaning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +532,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +833,7 @@
        "[8 rows x 36 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 107,
    "metadata": {
     "scrolled": true
    },
@@ -1509,7 +1510,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     },
