dropping encoded variables that are too rare

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "[8 rows x 36 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,12 +846,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dropping vairable with too many missing values"
+    "# Dropping variable with too many missing values\n",
+    "\n",
+    "Note : Number of missing values in variable could be a hyper parameter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1420,54 +1422,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    MSSubClass_20  MSSubClass_30  MSSubClass_40  MSSubClass_45  MSSubClass_50  \\\n",
-      "Id                                                                              \n",
-      "1               0              0              0              0              0   \n",
-      "2               1              0              0              0              0   \n",
-      "3               0              0              0              0              0   \n",
-      "4               0              0              0              0              0   \n",
-      "5               0              0              0              0              0   \n",
-      "\n",
-      "    MSSubClass_60  MSSubClass_70  MSSubClass_75  MSSubClass_80  MSSubClass_85  \\\n",
-      "Id                                                                              \n",
-      "1               1              0              0              0              0   \n",
-      "2               0              0              0              0              0   \n",
-      "3               1              0              0              0              0   \n",
-      "4               0              1              0              0              0   \n",
-      "5               1              0              0              0              0   \n",
-      "\n",
-      "    ...  SaleType_ConLw  SaleType_New  SaleType_Oth  SaleType_WD  \\\n",
-      "Id  ...                                                            \n",
-      "1   ...               0             0             0            1   \n",
-      "2   ...               0             0             0            1   \n",
-      "3   ...               0             0             0            1   \n",
-      "4   ...               0             0             0            1   \n",
-      "5   ...               0             0             0            1   \n",
-      "\n",
-      "    SaleCondition_Abnorml  SaleCondition_AdjLand  SaleCondition_Alloca  \\\n",
-      "Id                                                                       \n",
-      "1                       0                      0                     0   \n",
-      "2                       0                      0                     0   \n",
-      "3                       0                      0                     0   \n",
-      "4                       1                      0                     0   \n",
-      "5                       0                      0                     0   \n",
-      "\n",
-      "    SaleCondition_Family  SaleCondition_Normal  SaleCondition_Partial  \n",
-      "Id                                                                     \n",
-      "1                      0                     1                      0  \n",
-      "2                      0                     1                      0  \n",
-      "3                      0                     1                      0  \n",
-      "4                      0                     0                      0  \n",
-      "5                      0                     1                      0  \n",
-      "\n",
-      "[5 rows x 555 columns]\n"
+      "Utilities_AllPub      1459\n",
+      "Street_Pave           1454\n",
+      "Condition2_Norm       1445\n",
+      "RoofMatl_CompShg      1434\n",
+      "Heating_GasA          1428\n",
+      "                      ... \n",
+      "ExterCond_Po             1\n",
+      "GarageYrBlt_1906.0       1\n",
+      "YearBuilt_1875           1\n",
+      "YearBuilt_1872           1\n",
+      "YearBuilt_1911           1\n",
+      "Length: 555, dtype: int64\n",
+      "The minimum count threshold is: 73.0\n",
+      "['Neighborhood_NWAmes', 'YearRemodAdd_2005', 'Neighborhood_Sawyer', 'BsmtFinType1_LwQ', 'YearRemodAdd_2007', 'Neighborhood_NridgHt', 'Neighborhood_Gilbert', 'MoSold_11', 'Condition1_Feedr', 'Neighborhood_Somerst', 'MSSubClass_120', 'GarageType_BuiltIn', 'MoSold_10', 'PavedDrive_N', 'LotConfig_CulDSac', 'Electrical_FuseA', 'CentralAir_N', 'YearRemodAdd_2006', 'KitchenQual_Ex', 'Neighborhood_Edwards', 'SaleCondition_Abnorml', 'MoSold_3', 'Exterior1st_Plywood', 'Neighborhood_OldTown', 'BldgType_TwnhsE', 'BsmtExposure_Mn', 'OverallQual_4', 'BsmtQual_Ex', 'MoSold_8', 'SaleType_New', 'SaleCondition_Partial', 'MasVnrType_Stone', 'BsmtFinType1_Rec', 'BsmtExposure_Gd', 'MoSold_4', 'Exterior2nd_Plywood', 'MSSubClass_50', 'Foundation_BrkTil', 'ExterCond_Gd', 'BsmtFinType1_BLQ', 'Neighborhood_CollgCr', 'HouseStyle_1.5Fin', 'OverallQual_8', 'YrSold_2010', 'YearRemodAdd_1950', 'Exterior2nd_Wd Sdng', 'MoSold_5', 'OverallCond_7', 'Exterior1st_Wd Sdng', 'Exterior2nd_HdBoard', 'Exterior2nd_MetalSd', 'MSZoning_RM', 'BsmtFinType1_ALQ', 'Exterior1st_MetalSd', 'BsmtExposure_Av', 'Exterior1st_HdBoard', 'Neighborhood_NAmes', 'MoSold_7', 'HeatingQC_Gd', 'OverallCond_6', 'MoSold_6', 'LotConfig_Corner', 'RoofStyle_Hip', 'MSSubClass_60', 'YrSold_2008', 'YrSold_2006', 'OverallQual_7', 'YrSold_2007', 'YrSold_2009', 'GarageFinish_Fin', 'OverallQual_6', 'GarageType_Detchd', 'OverallQual_5', 'BsmtFinType1_GLQ', 'GarageFinish_RFn', 'HeatingQC_TA', 'BsmtFinType1_Unf', 'MasVnrType_BrkFace', 'HouseStyle_2Story', 'LotShape_IR1', 'ExterQual_Gd', 'Exterior2nd_VinylSd', 'Exterior1st_VinylSd', 'MSSubClass_20', 'KitchenQual_Gd', 'GarageFinish_Unf', 'BsmtQual_Gd', 'Foundation_CBlock', 'Foundation_PConc', 'BsmtQual_TA', 'HouseStyle_1Story', 'KitchenQual_TA', 'HeatingQC_Ex', 'OverallCond_5', 'MasVnrType_None', 'GarageType_Attchd', 'ExterQual_TA', 'LotShape_Reg', 'BsmtExposure_No', 'LotConfig_Inside', 'RoofStyle_Gable', 'MSZoning_RL', 'SaleCondition_Normal', 'BldgType_1Fam', 'BsmtFinType2_Unf', 'Condition1_Norm', 'SaleType_WD', 'ExterCond_TA', 'GarageQual_TA', 'BsmtCond_TA', 'LandContour_Lvl', 'GarageCond_TA', 'Electrical_SBrkr', 'PavedDrive_Y', 'Functional_Typ', 'CentralAir_Y', 'LandSlope_Gtl', 'Heating_GasA', 'RoofMatl_CompShg', 'Condition2_Norm', 'Street_Pave', 'Utilities_AllPub']\n",
+      "Utilities_AllPub      1459\n",
+      "Street_Pave           1454\n",
+      "Condition2_Norm       1445\n",
+      "RoofMatl_CompShg      1434\n",
+      "Heating_GasA          1428\n",
+      "                      ... \n",
+      "ExterCond_Po             1\n",
+      "GarageYrBlt_1906.0       1\n",
+      "YearBuilt_1875           1\n",
+      "YearBuilt_1872           1\n",
+      "YearBuilt_1911           1\n",
+      "Length: 555, dtype: int64\n"
      ]
     }
    ],
@@ -1475,8 +1462,34 @@
     "encode_train_data = pd.DataFrame()\n",
     "\n",
     "one_hot_encoded_variables = pd.get_dummies(train_data[categorical_variables], columns=categorical_variables)\n",
-    "print(one_hot_encoded_variables.head())\n",
+    "#print(one_hot_encoded_variables.head())\n",
     "\n",
+    "col_nan = one_hot_encoded_variables.sum(axis=0)\n",
+    "#sorted_columns = col_nan[col_nan >= 0].sort_values().index.to_list()\n",
+    "#sorted_columns = col_nan[col_nan >= 259].sort_values().index.to_list()\n",
+    "print(col_nan.sort_values(ascending=False))\n",
+    "\n",
+    "# Deciding the inital threshold to be 1% of dataset size\n",
+    "tot_instances = one_hot_encoded_variables.shape[0]\n",
+    "threshold = tot_instances*0.05\n",
+    "print ('The minimum count threshold is: '+str(threshold))\n",
+    "\n",
+    "\n",
+    "col_nan = one_hot_encoded_variables.sum(axis=0)\n",
+    "#sorted_columns = col_nan[col_nan >= 0].sort_values().index.to_list()\n",
+    "threshold_columns = col_nan[col_nan >= threshold].sort_values().index.to_list()\n",
+    "print(threshold_columns)\n",
+    "print(col_nan.sort_values(ascending=False))\n",
+    "\n",
+    "encode_train_data = train_data.drop(threshold_columns, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "encoded_train_data = pd.merge(one_hot_encoded_variables, train_data[quant_variables],\n",
     "                              how='outer', left_on='Id', right_on='Id')\n",
     "#print(encoded_train_data.head())"
@@ -1491,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 118,
    "metadata": {
     "scrolled": true
    },
@@ -1510,7 +1523,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
