adding a notebook to study variable importance

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
     "print(threshold_columns)\n",
     "print(col_nan.sort_values(ascending=False))\n",
     "\n",
-    "encode_train_data = train_data.drop(threshold_columns, axis=1)\n"
+    "dropped_one_hot_encoded_variables = one_hot_encoded_variables.drop(threshold_columns, axis=1)\n"
    ]
   },
   {
