--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -49,29 +49,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1460, 79)\n"
+      "(1460, 79)\n",
+      "(1459, 79)\n"
      ]
     }
    ],
    "source": [
-    "train_data = pd.read_csv(\"../data/pre-processed/train.csv\", sep=',', index_col=0)\n",
+    "train_data = pd.read_csv(\"../data/pre-processed/train.csv\", delimiter=\",\",header=0, index_col=0)\n",
+    "test_data = pd.read_csv(\"../data/pre-processed/test.csv\", delimiter=\",\",header=0, index_col=0)\n",
     "\n",
-    "target = train_data['SalePrice']\n",
+    "target_train = train_data['SalePrice']\n",
+    "\n",
     "train_data = train_data.drop(['SalePrice'], axis=1)\n",
     "\n",
-    "print(train_data.shape)"
+    "print(train_data.shape)\n",
+    "print(test_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +300,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -532,314 +536,13 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data = pd.read_csv(\"../data/pre-processed/test.csv\", sep=',', index_col=0)\n",
     "test_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSSubClass</th>\n",
-       "      <th>LotFrontage</th>\n",
-       "      <th>LotArea</th>\n",
-       "      <th>OverallQual</th>\n",
-       "      <th>OverallCond</th>\n",
-       "      <th>YearBuilt</th>\n",
-       "      <th>YearRemodAdd</th>\n",
-       "      <th>MasVnrArea</th>\n",
-       "      <th>BsmtFinSF1</th>\n",
-       "      <th>BsmtFinSF2</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GarageArea</th>\n",
-       "      <th>WoodDeckSF</th>\n",
-       "      <th>OpenPorchSF</th>\n",
-       "      <th>EnclosedPorch</th>\n",
-       "      <th>3SsnPorch</th>\n",
-       "      <th>ScreenPorch</th>\n",
-       "      <th>PoolArea</th>\n",
-       "      <th>MiscVal</th>\n",
-       "      <th>MoSold</th>\n",
-       "      <th>YrSold</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1201.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1452.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "      <td>1460.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>56.897260</td>\n",
-       "      <td>70.049958</td>\n",
-       "      <td>10516.828082</td>\n",
-       "      <td>6.099315</td>\n",
-       "      <td>5.575342</td>\n",
-       "      <td>1971.267808</td>\n",
-       "      <td>1984.865753</td>\n",
-       "      <td>103.685262</td>\n",
-       "      <td>443.639726</td>\n",
-       "      <td>46.549315</td>\n",
-       "      <td>...</td>\n",
-       "      <td>472.980137</td>\n",
-       "      <td>94.244521</td>\n",
-       "      <td>46.660274</td>\n",
-       "      <td>21.954110</td>\n",
-       "      <td>3.409589</td>\n",
-       "      <td>15.060959</td>\n",
-       "      <td>2.758904</td>\n",
-       "      <td>43.489041</td>\n",
-       "      <td>6.321918</td>\n",
-       "      <td>2007.815753</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>42.300571</td>\n",
-       "      <td>24.284752</td>\n",
-       "      <td>9981.264932</td>\n",
-       "      <td>1.382997</td>\n",
-       "      <td>1.112799</td>\n",
-       "      <td>30.202904</td>\n",
-       "      <td>20.645407</td>\n",
-       "      <td>181.066207</td>\n",
-       "      <td>456.098091</td>\n",
-       "      <td>161.319273</td>\n",
-       "      <td>...</td>\n",
-       "      <td>213.804841</td>\n",
-       "      <td>125.338794</td>\n",
-       "      <td>66.256028</td>\n",
-       "      <td>61.119149</td>\n",
-       "      <td>29.317331</td>\n",
-       "      <td>55.757415</td>\n",
-       "      <td>40.177307</td>\n",
-       "      <td>496.123024</td>\n",
-       "      <td>2.703626</td>\n",
-       "      <td>1.328095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>1300.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1872.000000</td>\n",
-       "      <td>1950.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2006.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>59.000000</td>\n",
-       "      <td>7553.500000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1954.000000</td>\n",
-       "      <td>1967.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>334.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>2007.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>69.000000</td>\n",
-       "      <td>9478.500000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1973.000000</td>\n",
-       "      <td>1994.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>383.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>480.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>2008.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>11601.500000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>2000.000000</td>\n",
-       "      <td>2004.000000</td>\n",
-       "      <td>166.000000</td>\n",
-       "      <td>712.250000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>576.000000</td>\n",
-       "      <td>168.000000</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>2009.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>190.000000</td>\n",
-       "      <td>313.000000</td>\n",
-       "      <td>215245.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>2010.000000</td>\n",
-       "      <td>2010.000000</td>\n",
-       "      <td>1600.000000</td>\n",
-       "      <td>5644.000000</td>\n",
-       "      <td>1474.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1418.000000</td>\n",
-       "      <td>857.000000</td>\n",
-       "      <td>547.000000</td>\n",
-       "      <td>552.000000</td>\n",
-       "      <td>508.000000</td>\n",
-       "      <td>480.000000</td>\n",
-       "      <td>738.000000</td>\n",
-       "      <td>15500.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>2010.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 36 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        MSSubClass  LotFrontage        LotArea  OverallQual  OverallCond  \\\n",
-       "count  1460.000000  1201.000000    1460.000000  1460.000000  1460.000000   \n",
-       "mean     56.897260    70.049958   10516.828082     6.099315     5.575342   \n",
-       "std      42.300571    24.284752    9981.264932     1.382997     1.112799   \n",
-       "min      20.000000    21.000000    1300.000000     1.000000     1.000000   \n",
-       "25%      20.000000    59.000000    7553.500000     5.000000     5.000000   \n",
-       "50%      50.000000    69.000000    9478.500000     6.000000     5.000000   \n",
-       "75%      70.000000    80.000000   11601.500000     7.000000     6.000000   \n",
-       "max     190.000000   313.000000  215245.000000    10.000000     9.000000   \n",
-       "\n",
-       "         YearBuilt  YearRemodAdd   MasVnrArea   BsmtFinSF1   BsmtFinSF2  ...  \\\n",
-       "count  1460.000000   1460.000000  1452.000000  1460.000000  1460.000000  ...   \n",
-       "mean   1971.267808   1984.865753   103.685262   443.639726    46.549315  ...   \n",
-       "std      30.202904     20.645407   181.066207   456.098091   161.319273  ...   \n",
-       "min    1872.000000   1950.000000     0.000000     0.000000     0.000000  ...   \n",
-       "25%    1954.000000   1967.000000     0.000000     0.000000     0.000000  ...   \n",
-       "50%    1973.000000   1994.000000     0.000000   383.500000     0.000000  ...   \n",
-       "75%    2000.000000   2004.000000   166.000000   712.250000     0.000000  ...   \n",
-       "max    2010.000000   2010.000000  1600.000000  5644.000000  1474.000000  ...   \n",
-       "\n",
-       "        GarageArea   WoodDeckSF  OpenPorchSF  EnclosedPorch    3SsnPorch  \\\n",
-       "count  1460.000000  1460.000000  1460.000000    1460.000000  1460.000000   \n",
-       "mean    472.980137    94.244521    46.660274      21.954110     3.409589   \n",
-       "std     213.804841   125.338794    66.256028      61.119149    29.317331   \n",
-       "min       0.000000     0.000000     0.000000       0.000000     0.000000   \n",
-       "25%     334.500000     0.000000     0.000000       0.000000     0.000000   \n",
-       "50%     480.000000     0.000000    25.000000       0.000000     0.000000   \n",
-       "75%     576.000000   168.000000    68.000000       0.000000     0.000000   \n",
-       "max    1418.000000   857.000000   547.000000     552.000000   508.000000   \n",
-       "\n",
-       "       ScreenPorch     PoolArea       MiscVal       MoSold       YrSold  \n",
-       "count  1460.000000  1460.000000   1460.000000  1460.000000  1460.000000  \n",
-       "mean     15.060959     2.758904     43.489041     6.321918  2007.815753  \n",
-       "std      55.757415    40.177307    496.123024     2.703626     1.328095  \n",
-       "min       0.000000     0.000000      0.000000     1.000000  2006.000000  \n",
-       "25%       0.000000     0.000000      0.000000     5.000000  2007.000000  \n",
-       "50%       0.000000     0.000000      0.000000     6.000000  2008.000000  \n",
-       "75%       0.000000     0.000000      0.000000     8.000000  2009.000000  \n",
-       "max     480.000000   738.000000  15500.000000    12.000000  2010.000000  \n",
-       "\n",
-       "[8 rows x 36 columns]"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.describe()"
    ]
   },
   {
@@ -853,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -868,9 +571,31 @@
     "col_nan = train_data.isnull().sum(axis=0)\n",
     "#sorted_columns = col_nan[col_nan >= 0].sort_values().index.to_list()\n",
     "sorted_columns = col_nan[col_nan >= 259].sort_values().index.to_list()\n",
+    "\n",
     "print(sorted_columns)\n",
     "\n",
     "train_data = train_data.drop(sorted_columns, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MSSubClass', 'Heating', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF', 'LowQualFinSF', 'GrLivArea', 'FullBath', 'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'TotRmsAbvGrd', 'Fireplaces', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'MiscVal', 'MoSold', 'YrSold', 'Foundation', 'ExterCond', 'HeatingQC', 'SaleCondition', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle', 'RoofMatl', 'BldgType', 'Condition2', 'ExterQual', 'HouseStyle', 'Condition1', 'LandSlope', 'LotConfig', 'LandContour', 'LotShape', 'Street', 'LotArea', 'Neighborhood', 'OverallQual', 'GarageCars', 'GarageArea', 'KitchenQual', 'Exterior1st', 'SaleType', 'Exterior2nd', 'TotalBsmtSF', 'BsmtUnfSF', 'BsmtFinSF1', 'BsmtFinSF2', 'BsmtFullBath', 'Functional', 'Utilities', 'BsmtHalfBath', 'MSZoning', 'MasVnrArea', 'MasVnrType', 'BsmtFinType2', 'BsmtFinType1', 'BsmtQual', 'BsmtExposure', 'BsmtCond', 'GarageType', 'GarageQual', 'GarageYrBlt', 'GarageFinish', 'GarageCond', 'LotFrontage', 'FireplaceQu', 'Fence', 'Alley', 'MiscFeature', 'PoolQC']\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_nan = test_data.isnull().sum(axis=0)\n",
+    "sorted_columns = col_nan[col_nan >= 0].sort_values().index.to_list()\n",
+    "#sorted_columns = col_nan.sort_values().index.to_list()\n",
+    "print(sorted_columns)\n",
+    "test_data = test_data.drop(sorted_columns, axis=1)"
    ]
   },
   {
@@ -888,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1403,14 +1128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['TotalBsmtSF', 'BsmtFinSF2', 'MiscVal', 'BsmtHalfBath', 'MasVnrArea', 'BsmtFinSF1', 'WoodDeckSF', '3SsnPorch', 'BsmtFullBath', 'Fireplaces', 'ScreenPorch', 'HalfBath', 'OpenPorchSF', 'PoolArea', 'TotRmsAbvGrd', 'LowQualFinSF', 'KitchenAbvGr', 'GarageArea', 'GrLivArea', 'LotArea', 'GarageCars', '2ndFlrSF', 'BedroomAbvGr', 'BsmtUnfSF', 'EnclosedPorch', '1stFlrSF', 'FullBath']\n"
+      "['KitchenAbvGr', 'BsmtFinSF2', 'EnclosedPorch', '3SsnPorch', 'MasVnrArea', 'Fireplaces', 'BsmtHalfBath', 'BsmtUnfSF', 'TotalBsmtSF', 'WoodDeckSF', 'PoolArea', 'GrLivArea', 'OpenPorchSF', 'BsmtFullBath', 'MiscVal', 'GarageCars', 'TotRmsAbvGrd', '1stFlrSF', 'LotArea', 'LowQualFinSF', 'ScreenPorch', 'BedroomAbvGr', 'BsmtFinSF1', 'GarageArea', '2ndFlrSF', 'HalfBath', 'FullBath']\n"
      ]
     }
    ],
@@ -1422,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -1523,7 +1248,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
