creating a new notebook, delving further into exploratory analysis

--- a/notebooks/data-processing.ipynb
+++ b/notebooks/data-processing.ipynb
@@ -15,16 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +512,41 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      1460.000000\n",
+       "mean     180921.195890\n",
+       "std       79442.502883\n",
+       "min       34900.000000\n",
+       "25%      129975.000000\n",
+       "50%      163000.000000\n",
+       "75%      214000.000000\n",
+       "max      755000.000000\n",
+       "Name: SalePrice, dtype: float64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_train.describe()"
    ]
   },
   {
@@ -531,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1555,14 +1584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KitchenAbvGr', 'BsmtFinSF2', 'EnclosedPorch', '3SsnPorch', 'MasVnrArea', 'Fireplaces', 'BsmtHalfBath', 'BsmtUnfSF', 'TotalBsmtSF', 'WoodDeckSF', 'PoolArea', 'GrLivArea', 'OpenPorchSF', 'BsmtFullBath', 'MiscVal', 'GarageCars', 'TotRmsAbvGrd', '1stFlrSF', 'LotArea', 'LowQualFinSF', 'ScreenPorch', 'BedroomAbvGr', 'BsmtFinSF1', 'GarageArea', '2ndFlrSF', 'HalfBath', 'FullBath']\n"
+      "['FullBath', '3SsnPorch', 'MasVnrArea', 'GrLivArea', 'GarageCars', 'TotRmsAbvGrd', 'Fireplaces', 'EnclosedPorch', 'BsmtFinSF1', 'WoodDeckSF', 'HalfBath', 'BsmtFinSF2', 'GarageArea', 'LowQualFinSF', '2ndFlrSF', 'ScreenPorch', 'MiscVal', 'BsmtUnfSF', 'LotArea', 'OpenPorchSF', 'BsmtFullBath', 'TotalBsmtSF', 'BedroomAbvGr', '1stFlrSF', 'KitchenAbvGr', 'PoolArea', 'BsmtHalfBath']\n"
      ]
     }
    ],
@@ -1572,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1620,9 +1649,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id\n",
+       "1       208500\n",
+       "2       181500\n",
+       "3       223500\n",
+       "4       140000\n",
+       "5       250000\n",
+       "         ...  \n",
+       "1456    175000\n",
+       "1457    210000\n",
+       "1458    266500\n",
+       "1459    142125\n",
+       "1460    147500\n",
+       "Name: SalePrice, Length: 1460, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_threshold_columns = train_col_nan[train_col_nan <= threshold].sort_values().index.to_list()\n",
     "# print(train_threshold_columns)\n",
@@ -1644,8 +1696,9 @@
     "\n",
     "test_data = test_one_hot_encoded_variables.drop(remove_from_test, axis=1)\n",
     "\n",
-    "encoded_train_data = pd.merge(one_hot_encoded_variables, train_data[quant_variables],\n",
-    "                              how='outer', left_on='Id', right_on='Id')"
+    "encoded_train_data = pd.merge(train_one_hot_encoded_variables, train_data[quant_variables],\n",
+    "                              how='outer', left_on='Id', right_on='Id')\n",
+    "encoded_train_data.insert(2,\"SalePrice\",target_train)"
    ]
   },
   {
@@ -1653,6 +1706,16 @@
    "metadata": {},
    "source": [
     "# Writing processed data back to csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_train_data.to_csv(\"../data/processed/encoded_train_data.csv\")\n",
+    "test_data.to_csv(\"../data/processed/encoded_test_data\")"
    ]
   },
   {
