--- a/notebooks/Exploratory Analysis.ipynb
+++ b/notebooks/Exploratory Analysis.ipynb
@@ -389,9 +389,16 @@
     "cmap = sns.diverging_palette(230, 20, as_cmap=True)\n",
     "mask = np.tril(np.ones_like(corr, dtype=bool))\n",
     "\n",
-    "sns.heatmap(corr, vmax=1, vmin=-1,center=0,\n",
+    "sns.heatmap(corr[\"\"], vmax=1, vmin=-1,center=0,\n",
     "            mask=mask, cmap=cmap, square=True,\n",
     "            linewidths=.25, cbar_kws={\"shrink\": .75})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Target-target Covarian"
    ]
   }
  ],
