--- a/notebooks/variables_processing.ipynb
+++ b/notebooks/variables_processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1460, 79)\n"
+      "(1460, 80)\n"
      ]
     },
     {
@@ -70,7 +70,6 @@
        "      <th>Utilities</th>\n",
        "      <th>LotConfig</th>\n",
        "      <th>...</th>\n",
-       "      <th>ScreenPorch</th>\n",
        "      <th>PoolArea</th>\n",
        "      <th>PoolQC</th>\n",
        "      <th>Fence</th>\n",
@@ -80,6 +79,7 @@
        "      <th>YrSold</th>\n",
        "      <th>SaleType</th>\n",
        "      <th>SaleCondition</th>\n",
+       "      <th>SalePrice</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Id</th>\n",
@@ -121,7 +121,6 @@
        "      <td>Inside</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -130,6 +129,7 @@
        "      <td>2008</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>208500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -145,7 +145,6 @@
        "      <td>FR2</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -154,6 +153,7 @@
        "      <td>2007</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>181500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -169,7 +169,6 @@
        "      <td>Inside</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -178,6 +177,7 @@
        "      <td>2008</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>223500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -193,7 +193,6 @@
        "      <td>Corner</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -202,6 +201,7 @@
        "      <td>2006</td>\n",
        "      <td>WD</td>\n",
        "      <td>Abnorml</td>\n",
+       "      <td>140000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -217,7 +217,6 @@
        "      <td>FR2</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -226,10 +225,11 @@
        "      <td>2008</td>\n",
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>250000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 79 columns</p>\n",
+       "<p>5 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,26 +241,26 @@
        "4           70       RL         60.0     9550   Pave   NaN      IR1   \n",
        "5           60       RL         84.0    14260   Pave   NaN      IR1   \n",
        "\n",
-       "   LandContour Utilities LotConfig  ... ScreenPorch PoolArea PoolQC Fence  \\\n",
+       "   LandContour Utilities LotConfig  ... PoolArea PoolQC Fence MiscFeature  \\\n",
        "Id                                  ...                                     \n",
-       "1          Lvl    AllPub    Inside  ...           0        0    NaN   NaN   \n",
-       "2          Lvl    AllPub       FR2  ...           0        0    NaN   NaN   \n",
-       "3          Lvl    AllPub    Inside  ...           0        0    NaN   NaN   \n",
-       "4          Lvl    AllPub    Corner  ...           0        0    NaN   NaN   \n",
-       "5          Lvl    AllPub       FR2  ...           0        0    NaN   NaN   \n",
+       "1          Lvl    AllPub    Inside  ...        0    NaN   NaN         NaN   \n",
+       "2          Lvl    AllPub       FR2  ...        0    NaN   NaN         NaN   \n",
+       "3          Lvl    AllPub    Inside  ...        0    NaN   NaN         NaN   \n",
+       "4          Lvl    AllPub    Corner  ...        0    NaN   NaN         NaN   \n",
+       "5          Lvl    AllPub       FR2  ...        0    NaN   NaN         NaN   \n",
        "\n",
-       "   MiscFeature MiscVal  MoSold  YrSold  SaleType  SaleCondition  \n",
-       "Id                                                               \n",
-       "1          NaN       0       2    2008        WD         Normal  \n",
-       "2          NaN       0       5    2007        WD         Normal  \n",
-       "3          NaN       0       9    2008        WD         Normal  \n",
-       "4          NaN       0       2    2006        WD        Abnorml  \n",
-       "5          NaN       0      12    2008        WD         Normal  \n",
+       "   MiscVal MoSold  YrSold  SaleType  SaleCondition  SalePrice  \n",
+       "Id                                                             \n",
+       "1        0      2    2008        WD         Normal     208500  \n",
+       "2        0      5    2007        WD         Normal     181500  \n",
+       "3        0      9    2008        WD         Normal     223500  \n",
+       "4        0      2    2006        WD        Abnorml     140000  \n",
+       "5        0     12    2008        WD         Normal     250000  \n",
        "\n",
-       "[5 rows x 79 columns]"
+       "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,14 +269,13 @@
     "train_data = pd.read_csv(\"../data/pre-processed/train.csv\", delimiter=\",\",header=0, index_col=0)\n",
     "# sale_price = train_data[\"SalePrice\"]\n",
     "# train_data = train_data.drop(\"SalePrice\",axis=1)\n",
-    "\n",
     "print(train_data.shape)\n",
     "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +507,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,19 +522,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will not concatenate dataset, however we will perform the same processing on both datasets to stay consitent."
+    "Datasets will be concatenated in order to have more efficient preocessing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntrain = train_data.shape[0]\n",
+    "ntest = test_data.shape[0]\n",
+    "\n",
+    "concat_data = pd.concat((train_data, test_data)).reset_index(drop=True)\n",
+    "\n",
+    "nindex, nfeatures = concat_data.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Categorical Variables"
+    "## Categorical Variables\n",
+    "\n",
+    "Here we will group the categorical variables to process them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,12 +561,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quantitative Variables"
+    "## Quantitative Variables\n",
+    "\n",
+    "Here we will group the quantitative variables to process them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
