--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,22 +260,22 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv(\"../data/pre-processed/train.csv\", delimiter=\",\",header=0, index_col=0)\n",
-    "# sale_price = train_data[\"SalePrice\"]\n",
-    "# train_data = train_data.drop(\"SalePrice\",axis=1)\n",
+    "sale_price = train_data[\"SalePrice\"]\n",
+    "train_data = train_data.drop(\"SalePrice\",axis=1)\n",
     "print(train_data.shape)\n",
     "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,15 +527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "ntrain = train_data.shape[0]\n",
     "ntest = test_data.shape[0]\n",
-    "\n",
     "concat_data = pd.concat((train_data, test_data)).reset_index(drop=True)\n",
-    "\n",
     "nindex, nfeatures = concat_data.shape"
    ]
   },
@@ -550,11 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_variables = []"
+    "categorical_variables = [\n",
+    "    'MSSubClass','MSZoning','Street','LotShape',\n",
+    "    'LandContour','Utilities','LotConfig','LandSlope',\n",
+    "    'Neighborhood','Condition1','Condition2','BldgType',\n",
+    "    'HouseStyle','OverallQual','OverallCond','YearBuilt',\n",
+    "    'YearRemodAdd','RoofStyle','RoofMatl','Exterior1st',\n",
+    "    'Exterior2nd','MasVnrType','ExterQual','ExterCond',\n",
+    "    'Foundation','BsmtQual','BsmtCond','BsmtExposure',\n",
+    "    'BsmtFinType1','BsmtFinType2','Heating','HeatingQC',\n",
+    "    'CentralAir','Electrical','KitchenQual','Functional',\n",
+    "    'GarageType','GarageYrBlt','GarageFinish',\n",
+    "    'GarageQual','GarageCond','PavedDrive',\n",
+    "    'MoSold','YrSold','SaleType','SaleCondition'\n",
+    "]\n"
    ]
   },
   {
@@ -568,11 +579,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantitative_variables = []"
+    "quantitative_variables = list(set(train_data.columns.values) - set(categorical_variables))\n"
    ]
   }
  ],
@@ -592,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
