put tranformations in function

--- a/notebooks/variables_processing.ipynb
+++ b/notebooks/variables_processing.ipynb
@@ -1617,6 +1617,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def log_center_scale(feature):\n",
+    "    \n",
+    "    # log transform\n",
+    "    log = np.log1p(concat_data[feature])\n",
+    "    \n",
+    "    # center-scaling\n",
+    "    scaler = StandardScaler().fit(log.values.reshape(-1,1))\n",
+    "    logged_centered_scaled = scaler.transform(log.values.reshape(-1,1))\n",
+    "    \n",
+    "    # flatten\n",
+    "    flattened_logged_centered_scaled = list(itertools.chain(*logged_centered_scaled))\n",
+    "    \n",
+    "    return logged_centered_scaled, scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 554,
    "metadata": {},
    "outputs": [],
@@ -1645,6 +1668,8 @@
     "log_sale_price = np.log1p(sale_price)\n",
     "scaler = StandardScaler().fit(log_sale_price.values.reshape(-1,1))\n",
     "transformed_target = scaler.transform(log_sale_price.values.reshape(-1,1))\n",
+    "\n",
+    "log_center_scale(feature)\n",
     "\n",
     "flattened_tranformed_target = list(itertools.chain(*transformed_target))\n",
     "\n",
