processing wrap up, begin variable importance

--- a/notebooks/variable_importance.ipynb
+++ b/notebooks/variable_importance.ipynb
@@ -8,6 +8,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pd.read_csv(\"../data/processed/encoded_train_data.csv\", delimiter=\",\",header=0, index_col=0)\n",
+    "X_test = pd.read_csv(\"../data/processed/encoded_train_data.csv\", delimiter=\",\",header=0, index_col=0)\n",
+    "y_train = pd.read_csv(\"../data/processed/encoded_train_data.csv\", delimiter=\",\",header=0, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Remove SalePrice from numeric_features to avoid scaling it\n",
+    "numeric_features = numeric_features.drop('SalePrice')\n",
+    "\n",
+    "## Scaling all the numeric features using Robust Scaler\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "scaler = RobustScaler()\n",
+    "\n",
+    "X_train[numeric_features] = scaler.fit_transform(X_train[numeric_features])\n",
+    "X_test[numeric_features]  = scaler.transform(X_test[numeric_features])\n",
+    "y_train"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
